# typeset-ocaml

./: README.md  dune-project  typeset.opam
example/: JSON.ml  Prog.ml  dune
lib/: Typeset.ml  Typeset.mli  dune
test/: Spec.ml  Tests.ml
util/: dune
