opam-version: "2.0"
version: "0.1"
synopsis: "An embedded DSL for source code pretty printing"
maintainer: "Soren Norbaek <sorennorbaek@gmail.com>"
authors: "Soren Norbaek <sorennorbaek@gmail.com>"
license: "MIT"
homepage: "https://github.com/soren-n/typeset-ocaml"
bug-reports: "https://github.com/soren-n/typeset-ocaml/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.8"}
  "qcheck" {>= "0.17"}
]
build: ["dune" "build"]
dev-repo: "git+https://github.com/soren-n/typeset-ocaml"
