opam-version: "2.0"
name: "typeset"
version: "1.0.0"
synopsis: "An embedded DSL for defining source code pretty printers"
maintainer: "Soren Norbaek <sorennorbaek@gmail.com>"
authors: "Soren Norbaek <sorennorbaek@gmail.com>"
license: "GPL-3.0"
homepage: "https://github.com/soren-n/typeset-ocaml"
bug-reports: "https://github.com/soren-n/typeset-ocaml/issues"
dev-repo: "git+https://github.com/soren-n/typeset-ocaml.git"
build: [
  "dune" "build" "-p" name "-j" jobs "@install"
  "@runtest" {with-test}
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "3.0"}
  "qcheck" {with-test & >= "0.21"}
  "cps_toolbox" {>= "0.3"}
]
